--- a/.github/workflows/build-optimized.yml
+++ b/.github/workflows/build-optimized.yml
@@ -126,7 +126,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [check-files, theme-check]
     if: needs.check-files.outputs.should-build == 'true' && (needs.theme-check.outputs.result == 'pass' || needs.theme-check.outputs.result == 'skipped')
-    
+    outputs:
+      assets-changed: ${{ steps.verify-changed-files.outputs.changed }}
+      shopify-changes: ${{ steps.shopify-changes.outputs.files }}
     permissions:
       contents: write
       pull-requests: write
@@ -228,15 +230,33 @@ jobs:
           echo "### Generated Assets:" >> $GITHUB_STEP_SUMMARY
           ls -la assets/jc-bundle-* assets/*.css 2>/dev/null | head -20 >> $GITHUB_STEP_SUMMARY || echo "No bundle files found" >> $GITHUB_STEP_SUMMARY
 
-      - name: Send Slack notification on success with changes
-        if: success() && steps.verify-changed-files.outputs.changed == 'true'
+  slack-notify:
+    runs-on: ubuntu-latest
+    needs: [check-files, theme-check, build]
+    if: always()
+    steps:
+      - name: Send Slack notification on theme check failure
+        if: needs.theme-check.result == 'failure'
         run: |
           export REPO_NAME="${{ github.event.repository.name }}"
           export REPO="${{ github.repository }}"
           export BRANCH="${{ github.head_ref || github.ref_name }}"
           export SHA="${{ github.sha }}"
           export ACTOR="${{ github.actor }}"
-          export SHOPIFY_CHANGES="${{ steps.shopify-changes.outputs.files }}"
+          export RUN_ID="${{ github.run_id }}"
+          export CHANNEL_ID="${{ secrets.CHANNEL_ID }}"
+          json=$(python3 -c 'import json, os; msg = "*Theme Check Failed* :warning:\n*Project Name:* {repo_name}\n*Repository:* <https://github.com/{repo}|{repo}>\n*Branch:* {branch}\n*Commit:* <https://github.com/{repo}/commit/{sha}|{sha}>\n*Actor:* {actor}\n*Logs:* <https://github.com/{repo}/actions/runs/{run_id}|View Logs>\n\n*Theme check failed - please fix the issues before proceeding*".format(repo_name=os.environ.get("REPO_NAME", ""), repo=os.environ.get("REPO", ""), branch=os.environ.get("BRANCH", ""), sha=os.environ.get("SHA", ""), actor=os.environ.get("ACTOR", ""), run_id=os.environ.get("RUN_ID", "")); print(json.dumps({"channel": os.environ.get("CHANNEL_ID", ""), "text": msg, "mrkdwn": True}))')
+          curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${{ secrets.SLACK_BOT_TOKEN }}" -d "$json" "https://slack.com/api/chat.postMessage"
+
+      - name: Send Slack notification on build success with changes
+        if: needs.build.result == 'success' && needs.build.outputs.assets-changed == 'true'
+        run: |
+          export REPO_NAME="${{ github.event.repository.name }}"
+          export REPO="${{ github.repository }}"
+          export BRANCH="${{ github.head_ref || github.ref_name }}"
+          export SHA="${{ github.sha }}"
+          export ACTOR="${{ github.actor }}"
+          export SHOPIFY_CHANGES="${{ needs.build.outputs.shopify-changes }}"
           export CHANNEL_ID="${{ secrets.CHANNEL_ID }}"
           THEME_CHECK_RESULT="${{ needs.theme-check.outputs.result }}"
           if [ "$THEME_CHECK_RESULT" = "pass" ]; then
@@ -250,15 +270,15 @@ jobs:
           json=$(python3 -c 'import json, os; msg = "*Build Succeeded* :tada:\n*Project Name:* {repo_name}\n*Repository:* <https://github.com/{repo}|{repo}>\n*Branch:* {branch}\n*Commit:* <https://github.com/{repo}/commit/{sha}|{sha}>\n*Actor:* {actor}\n*Assets were updated*\n\n{theme_check_status}".format(repo_name=os.environ.get("REPO_NAME", ""), repo=os.environ.get("REPO", ""), branch=os.environ.get("BRANCH", ""), sha=os.environ.get("SHA", ""), actor=os.environ.get("ACTOR", ""), theme_check_status=os.environ.get("THEME_CHECK_STATUS", "")) + (f"\n\n*Shopify Bot Changes (non-JSON):*\n{os.environ['SHOPIFY_CHANGES']}" if os.environ.get("SHOPIFY_CHANGES", "") else ""); print(json.dumps({"channel": os.environ.get("CHANNEL_ID", ""), "text": msg, "mrkdwn": True}))')
           curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${{ secrets.SLACK_BOT_TOKEN }}" -d "$json" "https://slack.com/api/chat.postMessage"
 
-      - name: Send Slack notification on success without changes
-        if: success() && steps.verify-changed-files.outputs.changed == 'false' && github.event_name == 'push'
+      - name: Send Slack notification on build success without changes
+        if: needs.build.result == 'success' && needs.build.outputs.assets-changed == 'false' && github.event_name == 'push'
         run: |
           export REPO_NAME="${{ github.event.repository.name }}"
           export REPO="${{ github.repository }}"
           export BRANCH="${{ github.head_ref || github.ref_name }}"
           export SHA="${{ github.sha }}"
           export ACTOR="${{ github.actor }}"
-          export SHOPIFY_CHANGES="${{ steps.shopify-changes.outputs.files }}"
+          export SHOPIFY_CHANGES="${{ needs.build.outputs.shopify-changes }}"
           export CHANNEL_ID="${{ secrets.CHANNEL_ID }}"
           THEME_CHECK_RESULT="${{ needs.theme-check.outputs.result }}"
           if [ "$THEME_CHECK_RESULT" = "pass" ]; then
@@ -272,8 +292,8 @@ jobs:
           json=$(python3 -c 'import json, os; msg = "*Build Completed* :white_check_mark:\n*Project Name:* {repo_name}\n*Repository:* <https://github.com/{repo}|{repo}>\n*Branch:* {branch}\n*Commit:* <https://github.com/{repo}/commit/{sha}|{sha}>\n*Actor:* {actor}\n*No changes in assets*\n\n{theme_check_status}".format(repo_name=os.environ.get("REPO_NAME", ""), repo=os.environ.get("REPO", ""), branch=os.environ.get("BRANCH", ""), sha=os.environ.get("SHA", ""), actor=os.environ.get("ACTOR", ""), theme_check_status=os.environ.get("THEME_CHECK_STATUS", "")) + (f"\n\n*Shopify Bot Changes (non-JSON):*\n{os.environ['SHOPIFY_CHANGES']}" if os.environ.get("SHOPIFY_CHANGES", "") else ""); print(json.dumps({"channel": os.environ.get("CHANNEL_ID", ""), "text": msg, "mrkdwn": True}))')
           curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${{ secrets.SLACK_BOT_TOKEN }}" -d "$json" "https://slack.com/api/chat.postMessage"
 
-      - name: Send Slack notification on failure
-        if: failure()
+      - name: Send Slack notification on build failure
+        if: needs.build.result == 'failure'
         run: |
           export REPO_NAME="${{ github.event.repository.name }}"
           export REPO="${{ github.repository }}"
@@ -281,7 +301,7 @@ jobs:
           export SHA="${{ github.sha }}"
           export ACTOR="${{ github.actor }}"
           export RUN_ID="${{ github.run_id }}"
-          export SHOPIFY_CHANGES="${{ steps.shopify-changes.outputs.files }}"
+          export SHOPIFY_CHANGES="${{ needs.build.outputs.shopify-changes }}"
           export CHANNEL_ID="${{ secrets.CHANNEL_ID }}"
           THEME_CHECK_RESULT="${{ needs.theme-check.outputs.result }}"
           if [ "$THEME_CHECK_RESULT" = "pass" ]; then
