--- a/.github/workflows/build-optimized.yml
+++ b/.github/workflows/build-optimized.yml
@@ -62,6 +62,8 @@ jobs:
 
   theme-check:
     runs-on: ubuntu-latest
+    needs: check-files
+    if: needs.check-files.outputs.should-build == 'true'
     outputs:
       result: ${{ steps.theme-check.outputs.result }}
       skipped: ${{ steps.skip-theme-check-flag.outputs.skip_theme_check }}
