--- a/.github/workflows/build-optimized.yml
+++ b/.github/workflows/build-optimized.yml
@@ -124,6 +124,27 @@ jobs:
           echo "Theme check was skipped"
           echo "result=skipped" >> $GITHUB_OUTPUT
 
+  debug-conditions:
+    runs-on: ubuntu-latest
+    needs: [check-files, theme-check]
+    if: always()
+    steps:
+      - name: Debug all job outputs
+        run: |
+          echo "🔍 Debug Information:"
+          echo "check-files.should-build: '${{ needs.check-files.outputs.should-build }}'"
+          echo "theme-check.result: '${{ needs.theme-check.outputs.result }}'"
+          echo "theme-check.skipped: '${{ needs.theme-check.outputs.skipped }}'"
+          echo ""
+          echo "Build condition evaluation:"
+          echo "should-build == 'true': ${{ needs.check-files.outputs.should-build == 'true' }}"
+          echo "theme-check pass or skip: ${{ needs.theme-check.outputs.result == 'pass' || needs.theme-check.outputs.result == 'skipped' }}"
+          echo "Final condition: ${{ needs.check-files.outputs.should-build == 'true' && (needs.theme-check.outputs.result == 'pass' || needs.theme-check.outputs.result == 'skipped') }}"
+          echo ""
+          echo "Job statuses:"
+          echo "check-files result: ${{ needs.check-files.result }}"
+          echo "theme-check result: ${{ needs.theme-check.result }}"
+
   build:
     runs-on: ubuntu-latest
     needs: [check-files, theme-check]
@@ -136,6 +157,12 @@ jobs:
       pull-requests: write
 
     steps:
+      - name: Debug build conditions
+        run: |
+          echo "🔍 Debugging build conditions:"
+          echo "should-build: ${{ needs.check-files.outputs.should-build }}"
+          echo "theme-check result: ${{ needs.theme-check.outputs.result }}"
+          echo "Build condition met: ${{ needs.check-files.outputs.should-build == 'true' && (needs.theme-check.outputs.result == 'pass' || needs.theme-check.outputs.result == 'skipped') }}"
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
