--- a/.github/workflows/build-optimized.yml
+++ b/.github/workflows/build-optimized.yml
@@ -15,7 +15,7 @@ jobs:
   check-files:
     runs-on: ubuntu-latest
     outputs:
-      should-build: ${{ steps.check.outputs.should-build }}
+      should-build: ${{ steps.skip-build-flag.outputs.should-build || steps.check.outputs.should-build }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
