fix: slack notification update

--- a/.github/workflows/build-optimized.yml
+++ b/.github/workflows/build-optimized.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       should-build: ${{ steps.skip-build-flag.outputs.should-build || steps.check.outputs.should-build }}
+      skip-build-used: ${{ steps.skip-build-flag.outputs.skip-build-used }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -29,7 +30,10 @@ jobs:
           if echo "$commit_message" | grep -q -- '--skip-build'; then
             echo "--skip-build flag found in commit message. Skipping build."
             echo "should-build=false" >> $GITHUB_OUTPUT
+            echo "skip-build-used=true" >> $GITHUB_OUTPUT
             exit 0
+          else
+            echo "skip-build-used=false" >> $GITHUB_OUTPUT
           fi
 
       - name: Check if build is needed
@@ -265,8 +269,20 @@ jobs:
     needs: [check-files, theme-check, build]
     if: always()
     steps:
+      - name: Send Slack notification for both skip flags
+        if: needs.check-files.outputs.skip-build-used == 'true' && needs.theme-check.outputs.skipped == 'true'
+        run: |
+          export REPO_NAME="${{ github.event.repository.name }}"
+          export REPO="${{ github.repository }}"
+          export BRANCH="${{ github.head_ref || github.ref_name }}"
+          export SHA="${{ github.sha }}"
+          export ACTOR="${{ github.actor }}"
+          export CHANNEL_ID="${{ secrets.CHANNEL_ID }}"
+          json=$(python3 -c 'import json, os; msg = "*Build & Theme Check Skipped* :fast_forward:\n*Project Name:* {repo_name}\n*Repository:* <https://github.com/{repo}|{repo}>\n*Branch:* {branch}\n*Commit:* <https://github.com/{repo}/commit/{sha}|{sha}>\n*Actor:* {actor}\n\n:point_right: Both `--skip-build` and `--skip-theme-check` flags were used\n:building_construction: Build: :fast_forward: Skipped\n:mag_right: Theme check: :fast_forward: Skipped".format(repo_name=os.environ.get("REPO_NAME", ""), repo=os.environ.get("REPO", ""), branch=os.environ.get("BRANCH", ""), sha=os.environ.get("SHA", ""), actor=os.environ.get("ACTOR", "")); print(json.dumps({"channel": os.environ.get("CHANNEL_ID", ""), "text": msg, "mrkdwn": True}))')
+          curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${{ secrets.SLACK_BOT_TOKEN }}" -d "$json" "https://slack.com/api/chat.postMessage"
+
       - name: Send Slack notification on theme check failure
-        if: needs.theme-check.result == 'failure'
+        if: needs.theme-check.result == 'failure' && !(needs.check-files.outputs.skip-build-used == 'true' && needs.theme-check.outputs.skipped == 'true')
         run: |
           export REPO_NAME="${{ github.event.repository.name }}"
           export REPO="${{ github.repository }}"
@@ -279,7 +295,7 @@ jobs:
           curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${{ secrets.SLACK_BOT_TOKEN }}" -d "$json" "https://slack.com/api/chat.postMessage"
 
       - name: Send Slack notification on build success with changes
-        if: needs.build.result == 'success' && needs.build.outputs.assets-changed == 'true'
+        if: needs.build.result == 'success' && needs.build.outputs.assets-changed == 'true' && !(needs.check-files.outputs.skip-build-used == 'true' && needs.theme-check.outputs.skipped == 'true')
         run: |
           export REPO_NAME="${{ github.event.repository.name }}"
           export REPO="${{ github.repository }}"
@@ -301,7 +317,7 @@ jobs:
           curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${{ secrets.SLACK_BOT_TOKEN }}" -d "$json" "https://slack.com/api/chat.postMessage"
 
       - name: Send Slack notification on build success without changes
-        if: needs.build.result == 'success' && needs.build.outputs.assets-changed == 'false' && github.event_name == 'push'
+        if: needs.build.result == 'success' && needs.build.outputs.assets-changed == 'false' && github.event_name == 'push' && !(needs.check-files.outputs.skip-build-used == 'true' && needs.theme-check.outputs.skipped == 'true')
         run: |
           export REPO_NAME="${{ github.event.repository.name }}"
           export REPO="${{ github.repository }}"
@@ -323,7 +339,7 @@ jobs:
           curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${{ secrets.SLACK_BOT_TOKEN }}" -d "$json" "https://slack.com/api/chat.postMessage"
 
       - name: Send Slack notification on build failure
-        if: needs.build.result == 'failure'
+        if: needs.build.result == 'failure' && !(needs.check-files.outputs.skip-build-used == 'true' && needs.theme-check.outputs.skipped == 'true')
         run: |
           export REPO_NAME="${{ github.event.repository.name }}"
           export REPO="${{ github.repository }}"
