--- a/.github/workflows/build-optimized.yml
+++ b/.github/workflows/build-optimized.yml
@@ -282,20 +282,9 @@ jobs:
     needs: [check-files, theme-check, build]
     if: always()
     steps:
-      - name: Send Slack notification for both skip flags
-        if: needs.check-files.outputs.skip-build-used == 'true' && needs.check-files.outputs.skip-theme-check-used == 'true'
-        run: |
-          export REPO_NAME="${{ github.event.repository.name }}"
-          export REPO="${{ github.repository }}"
-          export BRANCH="${{ github.head_ref || github.ref_name }}"
-          export SHA="${{ github.sha }}"
-          export ACTOR="${{ github.actor }}"
-          export CHANNEL_ID="${{ secrets.CHANNEL_ID }}"
-          json=$(python3 -c 'import json, os; msg = "*Build & Theme Check Skipped* :fast_forward:\n*Project Name:* {repo_name}\n*Repository:* <https://github.com/{repo}|{repo}>\n*Branch:* {branch}\n*Commit:* <https://github.com/{repo}/commit/{sha}|{sha}>\n*Actor:* {actor}\n\n:point_right: Both `--skip-build` and `--skip-theme-check` flags were used\n:building_construction: Build: :fast_forward: Skipped\n:mag_right: Theme check: :fast_forward: Skipped".format(repo_name=os.environ.get("REPO_NAME", ""), repo=os.environ.get("REPO", ""), branch=os.environ.get("BRANCH", ""), sha=os.environ.get("SHA", ""), actor=os.environ.get("ACTOR", "")); print(json.dumps({"channel": os.environ.get("CHANNEL_ID", ""), "text": msg, "mrkdwn": True}))')
-          curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${{ secrets.SLACK_BOT_TOKEN }}" -d "$json" "https://slack.com/api/chat.postMessage"
 
       - name: Send Slack notification on theme check failure
-        if: needs.theme-check.result == 'failure' && !(needs.check-files.outputs.skip-build-used == 'true' && needs.check-files.outputs.skip-theme-check-used == 'true')
+        if: needs.theme-check.result == 'failure'
         run: |
           export REPO_NAME="${{ github.event.repository.name }}"
           export REPO="${{ github.repository }}"
@@ -308,7 +297,7 @@ jobs:
           curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${{ secrets.SLACK_BOT_TOKEN }}" -d "$json" "https://slack.com/api/chat.postMessage"
 
       - name: Send Slack notification on build success with changes
-        if: needs.build.result == 'success' && needs.build.outputs.assets-changed == 'true' && !(needs.check-files.outputs.skip-build-used == 'true' && needs.check-files.outputs.skip-theme-check-used == 'true')
+        if: needs.build.result == 'success' && needs.build.outputs.assets-changed == 'true'
         run: |
           export REPO_NAME="${{ github.event.repository.name }}"
           export REPO="${{ github.repository }}"
@@ -330,7 +319,7 @@ jobs:
           curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${{ secrets.SLACK_BOT_TOKEN }}" -d "$json" "https://slack.com/api/chat.postMessage"
 
       - name: Send Slack notification on build success without changes
-        if: needs.build.result == 'success' && needs.build.outputs.assets-changed == 'false' && github.event_name == 'push' && !(needs.check-files.outputs.skip-build-used == 'true' && needs.check-files.outputs.skip-theme-check-used == 'true')
+        if: needs.build.result == 'success' && needs.build.outputs.assets-changed == 'false' && github.event_name == 'push'
         run: |
           export REPO_NAME="${{ github.event.repository.name }}"
           export REPO="${{ github.repository }}"
@@ -352,7 +341,7 @@ jobs:
           curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${{ secrets.SLACK_BOT_TOKEN }}" -d "$json" "https://slack.com/api/chat.postMessage"
 
       - name: Send Slack notification on build failure
-        if: needs.build.result == 'failure' && !(needs.check-files.outputs.skip-build-used == 'true' && needs.check-files.outputs.skip-theme-check-used == 'true')
+        if: needs.build.result == 'failure'
         run: |
           export REPO_NAME="${{ github.event.repository.name }}"
           export REPO="${{ github.repository }}"
