--- a/.github/workflows/build-optimized.yml
+++ b/.github/workflows/build-optimized.yml
@@ -282,6 +282,25 @@ jobs:
     needs: [check-files, theme-check, build]
     if: always()
     steps:
+      - name: Send Slack notification when build is skipped
+        if: needs.check-files.outputs.skip-build-used == 'true'
+        run: |
+          export REPO_NAME="${{ github.event.repository.name }}"
+          export REPO="${{ github.repository }}"
+          export BRANCH="${{ github.head_ref || github.ref_name }}"
+          export SHA="${{ github.sha }}"
+          export ACTOR="${{ github.actor }}"
+          export CHANNEL_ID="${{ secrets.CHANNEL_ID }}"
+          # Check if theme check was also skipped
+          THEME_CHECK_SKIPPED="${{ needs.check-files.outputs.skip-theme-check-used }}"
+          if [ "$THEME_CHECK_SKIPPED" = "true" ]; then
+            THEME_CHECK_STATUS="Theme check: ⏭️ Skipped (--skip-theme-check)"
+          else
+            THEME_CHECK_STATUS="Theme check: ⏭️ Skipped (build skipped)"
+          fi
+          export THEME_CHECK_STATUS
+          json=$(python3 -c 'import json, os; msg = "*Build Skipped* :fast_forward:\n*Project Name:* {repo_name}\n*Repository:* <https://github.com/{repo}|{repo}>\n*Branch:* {branch}\n*Commit:* <https://github.com/{repo}/commit/{sha}|{sha}>\n*Actor:* {actor}\n*Build was skipped using --skip-build flag*\n\n{theme_check_status}".format(repo_name=os.environ.get("REPO_NAME", ""), repo=os.environ.get("REPO", ""), branch=os.environ.get("BRANCH", ""), sha=os.environ.get("SHA", ""), actor=os.environ.get("ACTOR", ""), theme_check_status=os.environ.get("THEME_CHECK_STATUS", "")); print(json.dumps({"channel": os.environ.get("CHANNEL_ID", ""), "text": msg, "mrkdwn": True}))')
+          curl -X POST -H "Content-Type: application/json" -H "Authorization: Bearer ${{ secrets.SLACK_BOT_TOKEN }}" -d "$json" "https://slack.com/api/chat.postMessage"
 
       - name: Send Slack notification on theme check failure
         if: needs.theme-check.result == 'failure'
