fix: slack message upd

--- a/.github/workflows/build-optimized.yml
+++ b/.github/workflows/build-optimized.yml
@@ -151,6 +151,8 @@ jobs:
         run: |
           echo "🔍 Debug Information:"
           echo "check-files.should-build: '${{ needs.check-files.outputs.should-build }}'"
+          echo "check-files.skip-build-used: '${{ needs.check-files.outputs.skip-build-used }}'"
+          echo "check-files.skip-theme-check-used: '${{ needs.check-files.outputs.skip-theme-check-used }}'"
           echo "theme-check.result: '${{ needs.theme-check.outputs.result }}'"
           echo "theme-check.skipped: '${{ needs.theme-check.outputs.skipped }}'"
           echo ""
@@ -158,6 +160,10 @@ jobs:
           echo "should-build == 'true': ${{ needs.check-files.outputs.should-build == 'true' }}"
           echo "theme-check pass or skip: ${{ needs.theme-check.outputs.result == 'pass' || needs.theme-check.outputs.result == 'skipped' }}"
           echo "Final condition: ${{ needs.check-files.outputs.should-build == 'true' && (needs.theme-check.outputs.result == 'pass' || needs.theme-check.outputs.result == 'skipped') }}"
+          echo ""
+          echo "Slack notification conditions:"
+          echo "Skip build used: ${{ needs.check-files.outputs.skip-build-used == 'true' }}"
+          echo "Skip theme check used: ${{ needs.check-files.outputs.skip-theme-check-used == 'true' }}"
           echo ""
           echo "Job statuses:"
           echo "check-files result: ${{ needs.check-files.result }}"
